@@ -8,7 +8,8 @@
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
   26 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Added
-  support for per profile package.mask
+  support for per profile package.mask. Included check of packages file
+  to ensure that the profile depends on an adequate portage version.
 
 *portage-2.0.51_rc4 (26 Sep 2004): RC + Lock cleanup
 
